28431 artist-single page and swipebox plugin

--- a/static-html/artist-page.html
+++ b/static-html/artist-page.html
@@ -209,29 +209,110 @@
 
                 <section class="siteBody">
 
-                    <div class="row">
+                    <div class="row flexAbleRow">
                         <section class="medium-8 large-9 column siteContent siteContent--hasSidebar">
                             <section class="row column">
 
                                 <article class="postPage">
+                                    <!--    Back to category link -->
+                                    <div class="postPage-backLink">
+                                        <a href="#" title="go back to category">View All Artist</a>
+                                    </div>
                                     <!--    Post title  -->
-                                    <h1 class="postPage-title">Blog Category H1</h1>
+                                    <h1 class="postPage-title">H1 Artist Name</h1>
+
+                                    <!--    Post Info   -->
+                                    <div class="postPage-info">GRAND RECIPIENT | [MEDIUM, MEDIUM] | [GENRE FIELD CONTENT GOES HERE AND HERE]</div>
 
                                     <!--    Post Content    -->
-                                    <div class="postPage-content">
+                                    <div class="postPage-content postPage-content--bottomLine">
 
-                                        <div class="intro">
-                                            <p>Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.&nbsp;Intro p is 1.5em/1.25em and is colored using #04b4c3 to help it stand out.</p>
-                                        </div>
+                                        <!-- for image I'm using WP Add media structure  -->
+                                        <figure class="wp-caption alignnone">
+                                            <img class="size-full wp-image-13" src="http://placehold.it/650x380" alt="" width="650" height="380">
+                                        </figure>
+
+                                        <h2>ABOUT [ARTIST NAME] H2</h2>
+                                        <p>Body font is set to 16px pragmatica-web. <a href="#">This is a link in text</a> All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px
+                                            pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base
+                                            body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight.
+                                            </p>
 
                                     </div>
                                     <!--    Post Content    -->
                                 </article>
 
                             </section>
+                        </section>
 
+                        <aside class="medium-4 large-3 column siteSidebar">
+                            <div class="siteSidebar-inner">
+                                <!--    Sidebar widget  -->
+                                <div class="siteSidebar-galleryWidget">
+                                    <h3>Artist Gallery H3</h3>
+                                    <ul class="siteSidebar-gallery-element u-list--plain u-clearfix">
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="http://placehold.it/600x250" class="swipebox">
+                                                <img src="http://placehold.it/300x300" srcset="http://placehold.it/440x440 480w, http://placehold.it/300x300 768w" alt="">
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <a href="#" class="btn btn--fullWidth">Artist WebSite</a>
+                                </div>
+
+                            </div>
+                        </aside>
+
+                        <section class="medium-8 large-9 column relatedContent relatedContent--hasSidebar end">
+                            <!--    Upcoming Events  -->
                             <section class="row column">
-                                <!--    Posts List  -->
+                                <h2>UPCOMING EVENTS H2</h2>
+
                                 <div class="postsList">
                                     <!--    postsList-item  -->
                                     <div class="postsList-item">
@@ -267,68 +348,8 @@
                                     </div>
                                     <!--   / postsList-item  -->
                                 </div>
-
-                                <!--    pagination form WP theme Twenty Sixteen  -->
-                                <nav class="navigation pagination" role="navigation">
-                                    <h2 class="screen-reader-text">Posts navigation</h2>
-                                    <div class="nav-links">
-                                        <a class="prev page-numbers" href="#">
-            Previous page
-        </a>
-                                        <a class="page-numbers" href="#">
-                                            <span class="meta-nav screen-reader-text">Page </span> 1
-                                        </a>
-                                        <span class="page-numbers dots">...</span>
-                                        <a class="page-numbers" href="#">
-                                            <span class="meta-nav screen-reader-text">Page </span> 3
-                                        </a>
-                                        <span class="page-numbers current">
-            <span class="meta-nav screen-reader-text">Page </span> 4
-                                        </span>
-                                        <a class="page-numbers" href="#">
-                                            <span class="meta-nav screen-reader-text">Page </span> 5
-                                        </a>
-                                        <a class="next page-numbers" href="#">
-            Next page
-        </a>
-                                    </div>
-                                </nav>
-
                             </section>
-
                         </section>
-
-                        <aside class="medium-4 large-3 column siteSidebar">
-                            <div class="siteSidebar-inner">
-                                <!--    Sidebar widget  -->
-                                <div class="siteSidebar-item siteSidebar-item--sky">
-                                    <h3>About Our Journal</h3>
-                                    <div class="siteSidebar-item-content">
-                                        <p>
-                                            Our journal highlights the best in Pinellas County's visual and performing arts. Our multimedia coverage of this dynamic cultural scene includes timely features, event previews, and perspectives from casual to critical, focused on the arts in all genres.
-                                        </p>
-                                    </div>
-                                </div>
-
-                                <!--    Sidebar widget  -->
-                                <div class="siteSidebar-item">
-                                    <h3>Explore Our Journal by Topic (used on posts)</h3>
-                                    <div class="siteSidebar-item-content">
-                                        <nav>
-                                            <ul class="u-list--plain">
-                                                <li><a href="#">Visual Arts</a></li>
-                                                <li><a href="#">Music </a></li>
-                                                <li><a href="#">Performing Arts </a></li>
-                                                <li><a href="#">Literature</a></li>
-                                                <li><a href="#">Learning Center</a></li>
-                                                <li><a href="#">News</a></li>
-                                            </ul>
-                                        </nav>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </aside>
                     </div>
 
                 </section>
