--- a/static-html/dev-html/services/scripts.html
+++ b/static-html/dev-html/services/scripts.html
@@ -2,4 +2,5 @@
 <script src="https://use.typekit.net/gpb0qdz.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 <script src="js/vendor.min.js"></script>
+<script src="js/vendor/jquery.swipebox.min.js"></script>
 <script src="js/app.min.js"></script>
