--- a/static-html/test-page.html
+++ b/static-html/test-page.html
@@ -398,6 +398,7 @@
         } catch (e) {}
     </script>
     <script src="js/vendor.min.js"></script>
+    <script src="js/vendor/jquery.swipebox.min.js"></script>
     <script src="js/app.min.js"></script>
 </body>
 
