28430 add directory grid for artists

--- a/static-html/dev-html/blocks/grid-item-blog.html
+++ b/static-html/dev-html/blocks/grid-item-blog.html
@@ -5,7 +5,7 @@
         <div class="gridItem-info">
             <h3>OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW OPERA MADE NEW</h3>
             <p>Tarpon Springs Company Re-Imagines
-                Opera for Today’s Audience (..</p>
+                Opera for Today's Audience (...)</p>
             <p><strong>Read Post</strong></p>
             <p class="u-text--upper"><i>PERFORMING ARTS</i></p>
         </div>
