--- a/static-html/dev-html/partials-dev/directory-template.html
+++ b/static-html/dev-html/partials-dev/directory-template.html
@@ -24,3 +24,46 @@
     </section>
 
 </div>
+
+<!--medium-4 large-3 xlarge-2 -->
+<section class="row expanded small-collapse small-up-1 medium-up-3 large-up-3 xxlarge-up-5">
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+    <div class="column">
+        <!-- build:section blocks.gridItemArtist --><!-- /build -->
+    </div>
+</section>
