28431 Added map thumb and make some changes for sidebar layout

--- a/static-html/dev-html/partials-dev/artist-page-template.html
+++ b/static-html/dev-html/partials-dev/artist-page-template.html
@@ -13,13 +13,13 @@
                 <!--    Post Info   -->
                 <div class="postPage-info">GRAND RECIPIENT | [MEDIUM, MEDIUM] | [GENRE FIELD CONTENT GOES HERE AND HERE]</div>
 
+                <!--    Post Image   -->
+                <div class="postPage-image">
+                    <img src="http://placehold.it/650x380" alt="" width="650" height="380">
+                </div>
+
                 <!--    Post Content    -->
                 <div class="postPage-content postPage-content--bottomLine">
-
-                    <!-- for image I'm using WP Add media structure  -->
-                    <figure class="wp-caption alignnone">
-                        <img class="size-full wp-image-13" src="http://placehold.it/650x380" alt="" width="650" height="380">
-                    </figure>
 
                     <h2>ABOUT [ARTIST NAME] H2</h2>
                     <p>Body font is set to 16px pragmatica-web. <a href="#">This is a link in text</a> All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. </p>
@@ -53,10 +53,15 @@
         </div>
     </aside>
 
-    <section class="medium-8 large-9 column relatedContent relatedContent--hasSidebar end">
+    <section class="medium-8 large-9 column end relatedContent relatedContent--hasSidebar">
         <!--    Upcoming Events  -->
-        <section class="row column">
+        <section class="row column section-bottomLined">
             <h2>UPCOMING EVENTS H2</h2>
+
+            <!-- build:section blocks.postsList --><!-- /build -->
+        </section>
+        <section class="row column">
+            <h2>POSTS BY FIRSTNAME LASTNAME H2</h2>
 
             <!-- build:section blocks.postsList --><!-- /build -->
         </section>
