--- a/static-html/dev-html/partials-dev/event-page-template.html
+++ b/static-html/dev-html/partials-dev/event-page-template.html
@@ -17,13 +17,13 @@
                     <p>WHO SHOULD ATTEND: Artists, Art Lovers</p>
                 </div>
 
+                <!--    Post Image   -->
+                <div class="postPage-image">
+                    <img src="http://placehold.it/650x380" alt="" width="650" height="380">
+                </div>
+
                 <!--    Post Content    -->
                 <div class="postPage-content">
-
-                    <!-- for image I'm using WP Add media structure  -->
-                    <figure class="wp-caption alignnone">
-                        <img class="size-full wp-image-13" src="http://placehold.it/650x350" alt="" width="650" height="350">
-                    </figure>
 
                     <h2>ABOUT [THIS EVENT] H2</h2>
                     <p>Body font is set to 16px pragmatica-web. <a href="#">This is a link in text</a> All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. </p>
@@ -40,9 +40,9 @@
     <aside class="medium-4 large-3 column siteSidebar">
         <div class="siteSidebar-inner">
             <!--    Sidebar widget  -->
-            <div class="eventWidget">
+            <div class="siteSidebar-item">
                 <h3>Event details H3</h3>
-                <div class="eventWidget-eventInfo">
+                <div class="siteSidebar-item-content">
                     <p>
                         <strong>Date:</strong> January 28th, 2017 <br>
                         <strong>Time:</strong> 7:00 AM - 10:00 PM
@@ -57,13 +57,18 @@
                         <strong>Website:</strong> <a href="#">website.com</a>
                     </p>
                 </div>
+            </div>
+
+            <!--    Sidebar widget  -->
+            <div class="siteSidebar-item">
                 <h3>Venue details H3</h3>
-                <div class="eventWidget-venueInfo">
+                <div class="siteSidebar-item-content">
                     <p><a href="#">Venue Name</a></p>
                     <p>123 Street Rd <br> City, State, Zip <br> United States</p>
                     <p>(000) 000 0000</p>
-                    <div class="eventWidget-mapHolder">
+                    <div class="siteSidebar-item-mapHolder">
                         <!-- Map here width x height settings sets in plugin settings > formatting as width: 100%; height: 280px; -->
+                        <img src="images/map-thumb.jpg" alt=""> <!-- TODO:remove this image when plugins map took it's place -->
                     </div>
                     <p><a href="#">Get Directions</a></p>
                 </div>
