--- a/static-html/artist-page.html
+++ b/static-html/artist-page.html
@@ -224,13 +224,13 @@
                                     <!--    Post Info   -->
                                     <div class="postPage-info">GRAND RECIPIENT | [MEDIUM, MEDIUM] | [GENRE FIELD CONTENT GOES HERE AND HERE]</div>
 
+                                    <!--    Post Image   -->
+                                    <div class="postPage-image">
+                                        <img src="http://placehold.it/650x380" alt="" width="650" height="380">
+                                    </div>
+
                                     <!--    Post Content    -->
                                     <div class="postPage-content postPage-content--bottomLine">
-
-                                        <!-- for image I'm using WP Add media structure  -->
-                                        <figure class="wp-caption alignnone">
-                                            <img class="size-full wp-image-13" src="http://placehold.it/650x380" alt="" width="650" height="380">
-                                        </figure>
 
                                         <h2>ABOUT [ARTIST NAME] H2</h2>
                                         <p>Body font is set to 16px pragmatica-web. <a href="#">This is a link in text</a> All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight. Body font is set to 16px
@@ -308,10 +308,49 @@
                             </div>
                         </aside>
 
-                        <section class="medium-8 large-9 column relatedContent relatedContent--hasSidebar end">
+                        <section class="medium-8 large-9 column end relatedContent relatedContent--hasSidebar">
                             <!--    Upcoming Events  -->
-                            <section class="row column">
+                            <section class="row column section-bottomLined">
                                 <h2>UPCOMING EVENTS H2</h2>
+
+                                <div class="postsList">
+                                    <!--    postsList-item  -->
+                                    <div class="postsList-item">
+                                        <div class="postsList-item-image">
+                                            <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/280x280 768w">
+                                            <span class="postsList-item-categoryDecor" style="background-color: #0177c1"></span>
+                                        </div>
+                                        <div class="postsList-item-body">
+                                            <h3>Opera Made NEW</h3>
+                                            <p>Body font is set to 16px pragmatica-web. All other relationships cascade from the base body font. P size is 1em/1.6em, Pragmatica Light, 300 weight...</p>
+                                            <p><i>BY AUTHOR NAME | <a href="#">CATEGORY</a></i></p>
+                                        </div>
+                                        <div>
+                                            <a href="#" class="btn btn--fullWidth">Read Article</a>
+                                        </div>
+                                    </div>
+                                    <!--   / postsList-item  -->
+
+                                    <!--    postsList-item  -->
+                                    <div class="postsList-item">
+                                        <div class="postsList-item-image">
+                                            <img src="http://placehold.it/880x880" alt="" srcset="http://placehold.it/880x880 460w, http://placehold.it/280x280 768w">
+                                            <span class="postsList-item-categoryDecor" style="background-color: #f7941d"></span>
+                                        </div>
+                                        <div class="postsList-item-body">
+                                            <h3>Opera Made NEW</h3>
+                                            <p>Body font is set to 16px pragmatica-web. Body font is set to 16px pragmatica-web...</p>
+                                            <div class="postsList-item-info">BY AUTHOR NAME | <a href="#">CATEGORY</a></div>
+                                        </div>
+                                        <div>
+                                            <a href="#" class="btn btn--fullWidth">Read Article</a>
+                                        </div>
+                                    </div>
+                                    <!--   / postsList-item  -->
+                                </div>
+                            </section>
+                            <section class="row column">
+                                <h2>POSTS BY FIRSTNAME LASTNAME H2</h2>
 
                                 <div class="postsList">
                                     <!--    postsList-item  -->
