28430 add pagination blok for directory page

--- a/static-html/directory-page.html
+++ b/static-html/directory-page.html
@@ -238,8 +238,7 @@
 
                     </div>
 
-                    <!--medium-4 large-3 xlarge-2 -->
-                    <section class="row expanded small-collapse small-up-1 medium-up-3 large-up-3 xxlarge-up-5">
+                    <section class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
                         <div class="column">
                             <div class="gridItem gridItem--element">
                                 <a href="#" class="js-touchFocus">
@@ -409,6 +408,37 @@
                             </div>
 
                         </div>
+                    </section>
+
+                    <section class="row entityGrid-pagination">
+                        <section class="column">
+                            <!--    pagination form WP theme Twenty Sixteen  -->
+                            <nav class="navigation pagination" role="navigation">
+                                <h2 class="screen-reader-text">Posts navigation</h2>
+                                <div class="nav-links">
+                                    <a class="prev page-numbers" href="#">
+            Previous page
+        </a>
+                                    <a class="page-numbers" href="#">
+                                        <span class="meta-nav screen-reader-text">Page </span> 1
+                                    </a>
+                                    <span class="page-numbers dots">...</span>
+                                    <a class="page-numbers" href="#">
+                                        <span class="meta-nav screen-reader-text">Page </span> 3
+                                    </a>
+                                    <span class="page-numbers current">
+            <span class="meta-nav screen-reader-text">Page </span> 4
+                                    </span>
+                                    <a class="page-numbers" href="#">
+                                        <span class="meta-nav screen-reader-text">Page </span> 5
+                                    </a>
+                                    <a class="next page-numbers" href="#">
+            Next page
+        </a>
+                                </div>
+                            </nav>
+
+                        </section>
                     </section>
 
                 </section>
