--- a/static-html/dev-html/partials-dev/directory-template.html
+++ b/static-html/dev-html/partials-dev/directory-template.html
@@ -25,8 +25,7 @@
 
 </div>
 
-<!--medium-4 large-3 xlarge-2 -->
-<section class="row expanded small-collapse small-up-1 medium-up-3 large-up-3 xxlarge-up-5">
+<section class="row expanded small-collapse small-up-1 medium-up-3 xxlarge-up-5 entityGrid">
     <div class="column">
         <!-- build:section blocks.gridItemArtist --><!-- /build -->
     </div>
@@ -67,3 +66,11 @@
         <!-- build:section blocks.gridItemArtist --><!-- /build -->
     </div>
 </section>
+
+<section class="row entityGrid-pagination">
+    <section class="column">
+        <!--    pagination form WP theme Twenty Sixteen  -->
+        <!-- build:section blocks.entityPagination --><!-- /build -->
+    </section>
+</section>
+
