28431 remove not used class

--- a/static-html/artist-page.html
+++ b/static-html/artist-page.html
@@ -209,7 +209,7 @@
 
                 <section class="siteBody">
 
-                    <div class="row flexAbleRow">
+                    <div class="row">
                         <section class="medium-8 large-9 column siteContent siteContent--hasSidebar">
                             <section class="row column">
 
