--- a/static-html/dev-html/partials-dev/artist-page-template.html
+++ b/static-html/dev-html/partials-dev/artist-page-template.html
@@ -1,4 +1,4 @@
-<div class="row flexAbleRow">
+<div class="row">
     <section class="medium-8 large-9 column siteContent siteContent--hasSidebar">
         <section class="row column">
 
