28504 contact page sidebar layout changes

--- a/static-html/contact-page.html
+++ b/static-html/contact-page.html
@@ -269,7 +269,7 @@
                         <aside class="medium-4 large-3 column siteSidebar">
                             <div class="siteSidebar-inner">
                                 <!--    Sidebar widget  -->
-                                <div class="">
+                                <div class="siteSidebar-item">
                                     <h3>Offices & Mailing Address</h3>
                                     <div class="siteSidebar-item-content">
                                         <p>
@@ -278,12 +278,15 @@
                                         <p>
                                             <a href="tel:(727) 464-7261">(727) 464-7261</a>
                                         </p>
-                                        <div class="mapHolder">
+                                        <div class="siteSidebar-item-mapHolder">
                                             <!-- Map here width x height settings sets in plugin settings > formatting as width: 100%; height: 280px; -->
+                                            <img src="images/map-thumb.jpg" alt="">
+                                            <!-- TODO:remove this image when plugins map took it's place -->
                                         </div>
                                         <p><a href="#">Get Directions</a></p>
                                     </div>
                                 </div>
+
                             </div>
                         </aside>
                     </div>
