28377 made all promoblock as link

--- a/static-html/dev-html/blocks/promo-box.html
+++ b/static-html/dev-html/blocks/promo-box.html
@@ -1,4 +1,5 @@
 <div class="promoList-item">
+    <a href="#" class="promoList-item-link"></a>
     <div class="promoList-item-image">
         <img src="http://placehold.it/960x960"
              alt=""
