--- a/static-html/section-page.html
+++ b/static-html/section-page.html
@@ -235,6 +235,7 @@
                             <section class="row halfMedium-collapse medium-uncollapse promoList">
                                 <div class="halfMedium-6 column">
                                     <div class="promoList-item">
+                                        <a href="#" class="promoList-item-link"></a>
                                         <div class="promoList-item-image">
                                             <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
                                         </div>
@@ -248,10 +249,12 @@
                                         </div>
                                     </div>
                                     <!--   / promoList-item  -->
+
                                 </div>
                                 <!--   promoList-item  -->
                                 <div class="halfMedium-6 column">
                                     <div class="promoList-item">
+                                        <a href="#" class="promoList-item-link"></a>
                                         <div class="promoList-item-image">
                                             <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
                                         </div>
@@ -265,10 +268,12 @@
                                         </div>
                                     </div>
                                     <!--   / promoList-item  -->
+
                                 </div>
                                 <!--   promoList-item  -->
                                 <div class="halfMedium-6 column">
                                     <div class="promoList-item">
+                                        <a href="#" class="promoList-item-link"></a>
                                         <div class="promoList-item-image">
                                             <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
                                         </div>
@@ -282,10 +287,12 @@
                                         </div>
                                     </div>
                                     <!--   / promoList-item  -->
+
                                 </div>
                                 <!--   promoList-item  -->
                                 <div class="halfMedium-6 column">
                                     <div class="promoList-item">
+                                        <a href="#" class="promoList-item-link"></a>
                                         <div class="promoList-item-image">
                                             <img src="http://placehold.it/960x960" alt="" srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
                                         </div>
@@ -299,6 +306,7 @@
                                         </div>
                                     </div>
                                     <!--   / promoList-item  -->
+
                                 </div>
                                 <!--   promoList-item  -->
                             </section>
