28429 style datepicker icon, fix select padding

--- a/static-html/dev-html/partials-dev/directory-template.html
+++ b/static-html/dev-html/partials-dev/directory-template.html
@@ -70,13 +70,13 @@
         <section class="row">
             <div class="halfMedium-6 medium-3 medium-offset-1 column">
                 <label for="dateFrom">Date Range: From</label>
-                <div class="form-row">
+                <div class="form-row is-datepicker">
                     <input type="text" id="dateFrom" placeholder="all" class="js-datepicker">
                 </div>
             </div>
             <div class="halfMedium-6 medium-3 column">
                 <label for="dateTo">To</label>
-                <div class="form-row">
+                <div class="form-row is-datepicker">
                     <input type="text" id="dateTo" placeholder="all"  class="js-datepicker">
                 </div>
             </div>
