28533 header section layout

--- a/static-html/dev-html/pages/index.html
+++ b/static-html/dev-html/pages/index.html
@@ -8,7 +8,8 @@
             <!-- build:section partials.offCanvas --><!-- /build -->
         </div>
         <div class="off-canvas-content" data-off-canvas-content>
-            <!-- build:section partials.header --><!-- /build -->
+            <!-- NOTE: Index page have another header layout -->
+            <!-- build:section partials.homeHeader --><!-- /build -->
 
             <section class="siteBody">
 
