28429 add mobile toggler for filters

--- a/static-html/dev-html/partials-dev/directory-template.html
+++ b/static-html/dev-html/partials-dev/directory-template.html
@@ -30,9 +30,12 @@
     <section class="row">
         <div class="column">
             <h2 class="u-text--center">NARROW DOWN EVENTS</h2>
+            <p class="hide-for-medium">
+                <a href="#" class="btn btn--fullWidth js-toggle" data-toggle="js-filtersForm">Filters</a>
+            </p>
         </div>
     </section>
-    <form action="">
+    <form action="" class="directoryFilters-form js-filtersForm">
         <section class="row">
             <div class="halfMedium-6 medium-4 column">
                 <label for="attend">Who Should Attend</label>
