28553 changes for header layout

--- a/static-html/dev-html/partials-dev/home-header.html
+++ b/static-html/dev-html/partials-dev/home-header.html
@@ -1,6 +1,6 @@
 <header class="siteHeader siteHeader--headerSection">
-    <section class="row siteHeader-top">
-        <div class="row siteHeader-top-inner">
+    <div class="row siteHeader-inner">
+        <section class="row column siteHeader-top">
             <div class="small-9 medium-3 column">
                 <div class="siteHeader-logo">
                     <a href="#" title="Creative Pinellas">
@@ -64,7 +64,7 @@
                     <span class="mobileNavToggle-hamburger"><span></span></span>
                 </a>
             </div>
-        </div>
+        </section>
         <!-- build:section blocks.homeHeaderSection --><!-- /build -->
-    </section>
+    </div>
 </header>
