--- a/static-html/dev-html/blocks/header-section.html
+++ b/static-html/dev-html/blocks/header-section.html
@@ -1,4 +1,4 @@
-<div class="row headerSection">
+<div class="row column headerSection">
     <div class="medium-6 large-7 column">
         <div class="headerSection-inner-poster">
             <img src="http://placehold.it/556x375" srcset="http://placehold.it/960x650 480w, http://placehold.it/1600x1080 768w" alt="">
