--- a/static-html/index.html
+++ b/static-html/index.html
@@ -118,8 +118,8 @@
             <div class="off-canvas-content" data-off-canvas-content>
                 <!-- NOTE: Index page have another header layout -->
                 <header class="siteHeader siteHeader--headerSection">
-                    <section class="row siteHeader-top">
-                        <div class="row siteHeader-top-inner">
+                    <div class="row siteHeader-inner">
+                        <section class="row column siteHeader-top">
                             <div class="small-9 medium-3 column">
                                 <div class="siteHeader-logo">
                                     <a href="#" title="Creative Pinellas">
@@ -206,8 +206,8 @@
                                     <span class="mobileNavToggle-hamburger"><span></span></span>
                                 </a>
                             </div>
-                        </div>
-                        <div class="row headerSection">
+                        </section>
+                        <div class="row column headerSection">
                             <div class="medium-6 large-7 column">
                                 <div class="headerSection-inner-poster">
                                     <img src="http://placehold.it/556x375" srcset="http://placehold.it/960x650 480w, http://placehold.it/1600x1080 768w" alt="">
@@ -222,7 +222,7 @@
                             </div>
                         </div>
 
-                    </section>
+                    </div>
                 </header>
 
                 <section class="siteBody">
