28554 added what is creative... section layout and styles

--- a/static-html/dev-html/pages/index.html
+++ b/static-html/dev-html/pages/index.html
@@ -12,7 +12,7 @@
 
             <section class="siteBody">
 
-                <!-- Page Content goes here -->
+                <!-- build:section partials.indexPageLayout --><!-- /build -->
 
             </section>
 
