--- a/static-html/dev-html/blocks/promo-box.html
+++ b/static-html/dev-html/blocks/promo-box.html
@@ -3,7 +3,7 @@
         <div class="promoList-item-image">
             <img src="http://placehold.it/960x960"
                  alt=""
-                 srcset="http://placehold.it/960x960 480w, http://placehold.it/800x800 768w">
+                 srcset="http://placehold.it/960x960 480w, http://placehold.it/1480x1480 768w, http://placehold.it/480x480 1200w">
         </div>
         <div class="promoList-item-body">
             <h3>EXPLORE ART VENUES</h3>
